Arregle lo que dos usuarios no puedan iniciar sesion simultaneamente